added Explore section

--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     <link rel="stylesheet" href="resources/fonts.css">
     <!-- font normalize -->
     <link rel="stylesheet" href="resources/normalize.css">
-    <!-- jquery-->
-    <script src="resources/jquery-3.6.4.js"></script>
-    <!-- custom js -->
-    <script src="js/script.js"></script>
+    
     <!-- font awesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- custom (main) css-->
@@ -35,10 +32,10 @@
                 <div class="navbar-collapse">
                     <ul class = "navbar-nav">
                         <li class = "nav-item">
-                            <a href = "#intro" class="nav-link">intro</a>
+                            <a href = "#home" class="nav-link">intro</a>
                         </li>
                         <li class = "nav-item">
-                            <a href = "#feature" class="nav-link">feature</a>
+                            <a href = "#service" class="nav-link">feature</a>
                         </li>
                         <li class = "nav-item">
                             <a href = "#team" class="nav-link">team</a>
@@ -65,5 +62,73 @@
         </div>
     </header>
     <!--end of header -->
+
+    <!-- detail section -->
+    <section class = "detail">
+        <div class = "contact">
+            <div class = "row">
+                <div class = "detail-item">
+                    <span><i class = "fas fa-tablet-alt"></i></span>
+                    <h2>On-time delivery</h2>
+                    <div class="line"></div>
+                    <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit vitae, necessitatibus laboriosam laudantium dicta ut accusamus incidunt in maiores explicabo fugiat, nobis commodi, est obcaecati!
+                    </p>
+                </div>
+
+                <div class = "detail-item">
+                    <span><i class = "fab fa-html5"></i></span>
+                    <h2>Worldclass Designs</h2>
+                    <div class="line"></div>
+                    <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit vitae, necessitatibus laboriosam laudantium dicta ut accusamus incidunt in maiores explicabo fugiat, nobis commodi, est obcaecati!
+                    </p>
+                </div>
+
+                <div class = "detail-item">
+                    <span><i class = "far fa-bell"></i></span>
+                    <h2>Reliability</h2>
+                    <div class="line"></div>
+                    <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit vitae, necessitatibus laboriosam laudantium dicta ut accusamus incidunt in maiores explicabo fugiat, nobis commodi, est obcaecati!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of detail section -->
+
+    <!-- features section -->
+    <section class = "feature" id = "features">
+        <div class = "container">
+            <div class="row">
+                <div class="feature-left">
+                    <img src="assets/Dentures.jpg" alt = "">
+                </div>
+                <div class="feature-right">
+                    <div class="title">
+                        <h2>Explore the Features</h2>
+                        <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id animi pariatur optio mollitia omnis deleniti?</p>
+                    </div>
+                    <div class ="feature-item">
+                        <span><i class = "fas fa-tablet-alt"></i></span>
+                        <div>
+                            <h3>Complete Dentures</h3>
+                            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi adipisci quaerat sapiente est repellat eaque!</p>
+                        </div>
+                    </div>
+                    <div class ="feature-item">
+                        <span><i class = "fas fa-tablet-alt"></i></span>
+                        <div>
+                            <h3>Partial Dentures</h3>
+                            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi adipisci quaerat sapiente est repellat eaque!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- JQuery -->
+    <script src="resources/jquery-3.6.4.js"></script>
+    <!-- custom js -->
+    <script src="js/script.js"></script>
 </body>
 </html>
