added a sample video section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     
     <!-- font awesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- magnific popup -->
+    <link rel="stylesheet" href="resources/Magnific-Popup-master/Magnific-Popup-master/dist/magnific-popup.css">   
     <!-- custom (main) css-->
     <link rel="stylesheet" href="css/main.css">
     
@@ -125,9 +127,24 @@
             </div>
         </div>
     </section>
+    <!-- end of features section -->
+
+    <!-- sample video section -->
+    <section class="video">
+        <div class="container">
+            <a class = "center popup-youtube" href = "https://www.youtube.com/watch?v=pKF_doN3Tz8">
+                <i class="fas fa-play"></i>
+            </a>
+            <h2>Watch Sample video</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde maxime quas mollitia neque, eligendi repellat quaerat sunt perferendis atque deleniti.</p>
+        </div>
+    </section>
+    <!-- end of sample video section -->
 
     <!-- JQuery -->
     <script src="resources/jquery-3.6.4.js"></script>
+    <!-- magnific popup -->
+    <script src="resources/Magnific-Popup-master/Magnific-Popup-master/dist/jquery.magnific-popup.js"></script>
     <!-- custom js -->
     <script src="js/script.js"></script>
 </body>
