added contact section

--- a/index.html
+++ b/index.html
@@ -231,11 +231,45 @@
             </div>
         </div>
     </section>
-
-
-
-
     <!-- end of pricing section -->
+    <!-- contact section -->
+    <section class="contact" id = "contact">
+        <div class="container">
+            <div class="title">
+                <h2>Contact Us</h2>
+                <p class = "text">Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="row">
+                <div class="contact-left">
+                    <h2>Send Message Here</h2>
+                    <form>
+                        <input type="text" class="form-control"
+                        placeholder="Name">
+                        <input type="email" class="form-control"
+                        placeholder="Email">
+                        <textarea placeholder="Message" rows="6"></textarea>
+                        <button type="submit" class="submit-btn">Send Now</button>
+                    </form>
+                </div>
+
+                <div class="contact-right">
+                    <div>
+                        <h2>Visit clinic</h2>
+                        <p class="text">Nethaji Bypass, Thrissur Road, Edappal, Malappuram</p>
+                    </div>
+                    <div>
+                        <h2>Call Us</h2>
+                        <p class="text">7561868343 / 9846631184</p>
+                    </div>
+                    <div>
+                        <h2>Send Email</h2>
+                        <p class="text">manuks16@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of contact section -->
     <!-- JQuery -->
     <script src="resources/jquery-3.6.4.js"></script>
     <!-- magnific popup -->
