--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class = "contact">
             <div class = "row">
                 <div class = "detail-item">
-                    <span><i class = "fas fa-tablet-alt"></i></span>
+                    <span><i class = "fas fa-shipping-fast"></i></span>
                     <h2>On-time delivery</h2>
                     <div class="line"></div>
                     <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit vitae, necessitatibus laboriosam laudantium dicta ut accusamus incidunt in maiores explicabo fugiat, nobis commodi, est obcaecati!
@@ -81,7 +81,7 @@
                 </div>
 
                 <div class = "detail-item">
-                    <span><i class = "fab fa-html5"></i></span>
+                    <span><i class = "fa fa-thumbs-up"></i></span>
                     <h2>Worldclass Designs</h2>
                     <div class="line"></div>
                     <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit vitae, necessitatibus laboriosam laudantium dicta ut accusamus incidunt in maiores explicabo fugiat, nobis commodi, est obcaecati!
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class = "detail-item">
-                    <span><i class = "far fa-bell"></i></span>
+                    <span><i class = "fa fa-check"></i></span>
                     <h2>Reliability</h2>
                     <div class="line"></div>
                     <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit vitae, necessitatibus laboriosam laudantium dicta ut accusamus incidunt in maiores explicabo fugiat, nobis commodi, est obcaecati!
@@ -270,6 +270,23 @@
         </div>
     </section>
     <!-- end of contact section -->
+    <!-- footer -->
+    <footer class="footer center">
+        <div class="container">
+            <p class="text">Copyright &copy; RR Dental Designers | All Rights Reserved</p>
+            <div class= "footer-links">
+                <a href= "#" class="center">
+                    <i class = "fab fa-facebook-f"></i>
+                </a>
+            </div>
+            <div class="footer-links">
+                <a href="#" class="center">
+                    <i class = "fab fa-instagram"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
+    <!-- end of footer -->
     <!-- JQuery -->
     <script src="resources/jquery-3.6.4.js"></script>
     <!-- magnific popup -->
