Fix typo and polish website

--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
             <h1>Quality, Excellence, Beauty</h1>
             <p>Worldclass dental designs </p>
             <div class="hero-btns">
-                <button type = "button" class = "btn-trans">learn more</button>
-                <button type="button" class = "btn-white">meet our people</button>
+                <button type = "button" class = "btn-trans"><a href="#contact" style="color:white">Contact Us</a></button>
+                <button type="button" class = "btn-white"><a href="#pricing">See pricing</a></button>
             </div>
         </div>
     </header>
     <!--end of header -->
 
     <!-- detail section -->
-    <section class = "detail">
+    <section class = "detail" style="padding-top: 0px; padding-bottom:0px">
         <div class = "contact">
             <div class = "row">
                 <div class = "detail-item">
@@ -87,21 +87,13 @@
                     <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit vitae, necessitatibus laboriosam laudantium dicta ut accusamus incidunt in maiores explicabo fugiat, nobis commodi, est obcaecati!
                     </p>
                 </div>
-
-                <div class = "detail-item">
-                    <span><i class = "fa fa-check"></i></span>
-                    <h2>Reliability</h2>
-                    <div class="line"></div>
-                    <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit vitae, necessitatibus laboriosam laudantium dicta ut accusamus incidunt in maiores explicabo fugiat, nobis commodi, est obcaecati!
-                    </p>
-                </div>
             </div>
         </div>
     </section>
     <!-- end of detail section -->
 
     <!-- features section -->
-    <section class = "feature" id = "features">
+    <section class = "feature" id = "features" style="padding-top: 0px;">
         <div class = "container">
             <div class="row">
                 <div class="feature-left">
@@ -259,11 +251,11 @@
                     </div>
                     <div>
                         <h2>Call Us</h2>
-                        <p class="text">7561868343 / 9846631184</p>
+                        <p class="text">756186838843 / 988846631184</p>
                     </div>
                     <div>
                         <h2>Send Email</h2>
-                        <p class="text">manuks16@gmail.com</p>
+                        <p class="text">manughgks16@gmail.com</p>
                     </div>
                 </div>
             </div>
