--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class = "container">
             <div class="row">
                 <div class="feature-left">
-                    <img src="assets/Dentures.jpg" alt = "">
+                    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fstock.adobe.com%2Fsearch%2Fimages%3Fk%3Ddental%2Bwallpaper&psig=AOvVaw0AySgRxjuuzStJkNWP8kpn&ust=1691868248640000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMi61MGq1YADFQAAAAAdAAAAABAE" alt = "">
                 </div>
                 <div class="feature-right">
                     <div class="title">
