Delete some files to render

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
     <!-- end of detail section -->
 
     <!-- features section -->
-    <section class = "feature" id = "features" style="padding-top: 0px;">
+    <section class = "feature" id = "features" style="padding-top: 0px; padding-bottom: 0px;">
         <div class = "container">
             <div class="row">
                 <div class="feature-left">
-                    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fstock.adobe.com%2Fsearch%2Fimages%3Fk%3Ddental%2Bwallpaper&psig=AOvVaw0AySgRxjuuzStJkNWP8kpn&ust=1691868248640000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMi61MGq1YADFQAAAAAdAAAAABAE" alt = "">
+                    <img src="assets/Dentures.jpg" alt = "">
                 </div>
                 <div class="feature-right">
                     <div class="title">
